# hfn

./: CMakeLists.txt  README.md
include/hfn/: config.hpp  cxstring.hpp  digest.hpp  fixed_string.hpp  fnv1a.hpp  murmur3.hpp  rhid.hpp  type_hash.hpp  wyhash.hpp  xxhash.hpp
include/hfn/detail/: fnv1a.hpp  murmur3.hpp  type_name_ex.hpp
src/: murmur3.cpp
unit_tests/: CMakeLists.txt  main.cpp
